<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/rootView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layoutDirection="rtl"
        android:minWidth="250dp"
        tools:context=".DownloadHelpDialog"
        android:gravity="center"
        android:orientation="vertical">


    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/your_phone_spec"
            android:textColor="@color/color_material_white"
            android:textStyle="bold"
            android:padding="@dimen/space_xl"
            android:background="@color/color_material_blue_grey_700"
            android:layout_marginBottom="@dimen/space_md"/>

    <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space_md"
            app:cardCornerRadius="@dimen/space_md"
            app:cardElevation="0dp"
            app:strokeWidth="1dp"
            app:strokeColor="@color/color_material_grey_300">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:orientation="vertical">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/processor"
                    android:textColor="@color/color_material_black"
                    android:textStyle="bold"
                    android:layout_margin="@dimen/space_md"/>

            <TextView
                    android:id="@+id/adh_processor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/processor"
                    android:layout_gravity="end"
                    android:textColor="@color/color_material_black"
                    android:layout_margin="@dimen/space_md"/>

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space_md"
            app:cardCornerRadius="@dimen/space_md"
            app:cardElevation="0dp"
            app:strokeWidth="1dp"
            app:strokeColor="@color/color_material_grey_300">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:orientation="vertical">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/graphic"
                    android:textColor="@color/color_material_black"
                    android:textStyle="bold"
                    android:layout_margin="@dimen/space_md"/>

            <TextView
                    android:id="@+id/adh_graphic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/graphic"
                    android:layout_gravity="end"
                    android:textColor="@color/color_material_black"
                    android:layout_margin="@dimen/space_md"/>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>