<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:background="@color/colorBackgroundLight">

    <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".AppsFragment">

        <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/fa_content_Container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                tools:visibility="visible"
                android:orientation="vertical">

            <Button
                    android:id="@+id/fa_categories"
                    android:layout_margin="@dimen/space_sm"
                    app:backgroundTint="@color/color_material_light_green_500"
                    android:textColor="@color/color_material_white"
                    android:textStyle="bold"
                    android:text="@string/categories"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/space_md"
                    app:cardCornerRadius="@dimen/space_sm">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                    <FrameLayout
                            android:id="@+id/fa_newGameMore"
                            android:layoutDirection="rtl"
                            android:background="?selectableItemBackground"
                            android:padding="@dimen/space_lg"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                        <androidx.appcompat.widget.AppCompatTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/newest"
                                android:layout_gravity="start"
                                android:textColor="@color/color_material_black"/>

                        <androidx.appcompat.widget.AppCompatTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="end"
                                android:text="@string/more"
                                android:textColor="@color/color_material_green_500"
                                android:textStyle="bold"/>

                    </FrameLayout>

                    <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/fa_newGameRecyclerView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/space_md"
                    app:cardCornerRadius="@dimen/space_sm">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                    <FrameLayout
                            android:id="@+id/fa_suggestionMore"
                            android:layoutDirection="rtl"
                            android:background="?selectableItemBackground"
                            android:padding="@dimen/space_lg"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                        <androidx.appcompat.widget.AppCompatTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/suggestion"
                                android:layout_gravity="start"
                                android:textColor="@color/color_material_black"/>

                        <androidx.appcompat.widget.AppCompatTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="end"
                                android:text="@string/more"
                                android:textColor="@color/color_material_green_500"
                                android:textStyle="bold"/>

                    </FrameLayout>

                    <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/fa_suggestionRecyclerView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/space_md"
                    app:cardCornerRadius="@dimen/space_sm">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                    <FrameLayout
                            android:background="?selectableItemBackground"
                            android:id="@+id/fa_mostDownloadedMore"
                            android:layoutDirection="rtl"
                            android:padding="@dimen/space_lg"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                        <androidx.appcompat.widget.AppCompatTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/most_viewed"
                                android:layout_gravity="start"
                                android:textColor="@color/color_material_black"/>

                        <androidx.appcompat.widget.AppCompatTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="end"
                                android:text="@string/more"
                                android:textColor="@color/color_material_green_500"
                                android:textStyle="bold"/>

                    </FrameLayout>

                    <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/fa_mostDownloadedRecyclerView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/space_md"
                    app:cardCornerRadius="@dimen/space_sm">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                    <FrameLayout
                            android:background="?selectableItemBackground"
                            android:id="@+id/fa_topAppsMore"
                            android:layoutDirection="rtl"
                            android:padding="@dimen/space_lg"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                        <androidx.appcompat.widget.AppCompatTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/bests"
                                android:layout_gravity="start"
                                android:textColor="@color/color_material_black"/>

                        <androidx.appcompat.widget.AppCompatTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="end"
                                android:text="@string/more"
                                android:textColor="@color/color_material_green_500"
                                android:textStyle="bold"/>

                    </FrameLayout>

                    <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/fa_topAppsRecyclerView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.core.widget.NestedScrollView>

    <FrameLayout
            android:id="@+id/faTopContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

        <androidx.core.widget.ContentLoadingProgressBar
                android:id="@+id/fa_newGameProgressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/space_md"
                style="?android:attr/progressBarStyle"
                android:layout_gravity="center"/>

        <Button
                android:id="@+id/fa_tryAgain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/space_md"
                app:backgroundTint="@color/colorPrimary"
                android:visibility="gone"
                tools:visibility="gone"
                android:textColor="@color/color_material_white"
                android:text="@string/try_again"
                android:layout_gravity="center"/>

    </FrameLayout>

</FrameLayout>

